fix spacing and responsive design

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@
   }
   /* Figure out how to change the image with javascript 2 lines below */
   .first {
-    background-image: url(images/background8.png); 
+    background-image: url(images/background4.png); 
     width: 100%;
     height: 100%;
     background-attachment: fixed;
@@ -61,7 +61,7 @@
     color: #fff;
     font-size: 50px;
     font-weight: bold;
-    height: 750px;
+    height: 900px;
     padding-top: 10%;
     padding-left: 25%;
     padding-right: 25%;
@@ -128,10 +128,17 @@
     padding-right: 0%;
 }
 .large {
-    font-size: 88px;
+    font-size: 20px;
 }
 .small {
-    font-size: 48px;
+    font-size: 20px;
+}
+.top {
+  font-size: 30px;
+}
+.small {
+  padding-left: 12%;
+  padding-right: 12%;
 }
 }
 
@@ -140,6 +147,9 @@
 .responsive-main {
     padding-left: 10%;
     padding-right: 10%;
+}
+.first {
+  font-size: 20px;
 }
 }
 
